--- a/verification-sent.html
+++ b/verification-sent.html
@@ -336,12 +336,19 @@
                 document.getElementById('userEmail').textContent = email;
                 localStorage.setItem('pendingVerificationEmail', email);
             } else {
-                window.location.href = 'register.html'; // Redirect if no email
+                const storedEmail = localStorage.getItem('pendingVerificationEmail');
+                if (storedEmail) {
+                    document.getElementById('userEmail').textContent = storedEmail;
+                } else {
+                    document.getElementById('resend-container').style.display = 'none';
+                    document.getElementById('no-email-warning').style.display = 'block';
+                }
             }
         });
 
         async function resendVerification() {
-            const email = new URLSearchParams(window.location.search).get('email');
+            const email = localStorage.getItem('pendingVerificationEmail') || 
+                         new URLSearchParams(window.location.search).get('email');
             
             if (!email) {
                 alert('No email found for verification');
@@ -349,24 +356,19 @@
             }
 
             try {
+                const supabase = window.supabaseClient;
                 const { error } = await supabase.auth.resend({
                     type: 'signup',
-                    email: email,
-                    options: {
-                        emailRedirectTo: window.location.origin + '/verify-success.html'
-                    }
+                    email: email
                 });
 
                 if (error) throw error;
                 alert('Verification email resent successfully!');
             } catch (error) {
                 console.error('Resend error:', error);
-                alert(`Error: ${error.message}`);
+                alert(`Error resending email: ${error.message}`);
             }
         }
-
-        // Add event listener for resend button
-        document.getElementById('resendButton').addEventListener('click', resendVerification);
     </script>
 </body>
 </html> 
