--- a/events.html
+++ b/events.html
@@ -951,16 +951,16 @@
     });
 
     document.addEventListener('DOMContentLoaded', () => {
+        // Remove this duplicate mobile menu code
+        /* DELETE START
         const menuToggle = document.querySelector('.menu-toggle');
         const navLinks = document.querySelector('.nav-links');
         
-        // Toggle mobile menu
         menuToggle.addEventListener('click', () => {
             navLinks.classList.toggle('active');
             menuToggle.querySelector('i').classList.toggle('fa-times');
         });
 
-        // Close menu when clicking outside
         document.addEventListener('click', (e) => {
             if (!menuToggle.contains(e.target) && !navLinks.contains(e.target)) {
                 navLinks.classList.remove('active');
@@ -968,13 +968,17 @@
             }
         });
 
-        // Close menu when clicking a link
         document.querySelectorAll('.nav-links a').forEach(link => {
             link.addEventListener('click', () => {
                 navLinks.classList.remove('active');
                 menuToggle.querySelector('i').classList.remove('fa-times');
             });
         });
+        DELETE END */
+        
+        // Keep only the event registration code
+        const registrationModal = document.getElementById('registrationModal');
+        // ... rest of your existing event-specific code
     });
     </script>
 </body>
