--- a/verification-sent.html
+++ b/verification-sent.html
@@ -56,7 +56,8 @@
             <div class="verification-info">
                 <p><i class="fas fa-info-circle"></i> If you don't see the email, please check your spam folder.</p>
                 <p><i class="fas fa-clock"></i> The verification link will expire in 24 hours.</p>
-                <p><i class="fas fa-exclamation-triangle"></i> If the verification link expires, you'll need to register again.</p>
+                <p><i class="fas fa-exclamation-triangle"></i> If the verification link expires, you'll need to request a new one.</p>
+                <p><i class="fas fa-envelope"></i> If you don't receive an email after a few minutes, click the "Resend Email" button below.</p>
             </div>
             <div class="verification-actions">
                 <a href="login.html" class="btn primary-btn">Return to Login</a>
