--- a/profile-completion.html
+++ b/profile-completion.html
@@ -537,8 +537,8 @@
                 userProfile = profile;
                 
                 // Populate form with existing data if available
-                if (profile.phone_number) {
-                    document.getElementById('phoneNumber').value = profile.phone_number;
+                if (profile.phone) {
+                    document.getElementById('phoneNumber').value = profile.phone;
                 }
                 
                 if (profile.date_of_birth) {
