--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="navigation.js" defer></script>
     <style>
         /* Add to existing styles */
         .password-wrapper {
@@ -53,11 +54,9 @@
                 <span>BLITZ T CLUB</span>
             </a>
         </div>
-        <button class="menu-toggle" aria-label="Toggle navigation menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
         <ul class="nav-links">
             <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="events.html"><i class="fas fa-calendar"></i>Events</a></li>
