--- a/dashboard.html
+++ b/dashboard.html
@@ -1344,10 +1344,10 @@
                 <span>BLITZ T CLUB</span>
             </a>
         </div>
-        <div class="menu-toggle" aria-label="Toggle navigation menu">
+        <button class="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-links">
             <i class="fas fa-bars"></i>
-        </div>
-        <ul class="nav-links">
+        </button>
+        <ul class="nav-links" id="nav-links">
             <!-- Navigation items will be dynamically inserted by navigation.js -->
         </ul>
     </nav>
