--- a/register.html
+++ b/register.html
@@ -255,16 +255,11 @@
                 <span>BLITZ T CLUB</span>
             </a>
         </div>
-        <div class="menu-toggle">
+        <button class="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false" aria-controls="nav-links">
             <i class="fas fa-bars"></i>
-        </div>
-        <ul class="nav-links">
-            <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
-            <li><a href="events.html"><i class="fas fa-calendar"></i>Events</a></li>
-            <li><a href="gallery.html"><i class="fas fa-images"></i>Gallery</a></li>
-            <li><a href="news.html"><i class="fas fa-newspaper"></i>News</a></li>
-            <li><a href="register.html" class="active"><i class="fas fa-user-plus"></i>Join Us</a></li>
-            <li><a href="login.html"><i class="fas fa-sign-in-alt"></i>Login</a></li>
+        </button>
+        <ul class="nav-links" id="nav-links">
+            <!-- Navigation items will be dynamically inserted by navigation.js -->
         </ul>
     </nav>
 
