--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>About Us - Blitz T Club</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="mobile-optimizations.css">
+    <link rel="stylesheet" href="mobile-navigation.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
