--- a/dashboard.html
+++ b/dashboard.html
@@ -1646,10 +1646,10 @@
                         </div>
                         <div class="event-info">
                             <h3 class="event-title">Tesla Light Show Spectacular</h3>
-                            <p class="event-location">
+                            <p class="event-location" style="color: #FFFFFF !important;">
                                 <i class="fas fa-map-marker-alt"></i> Golf IT Up Parking Lot, Thornhill, ON
                             </p>
-                            <p class="event-time">
+                            <p class="event-time" style="color: #FFFFFF !important;">
                                 <i class="fas fa-clock"></i> 7:30 PM EST
                             </p>
                             <div class="event-highlights">
@@ -4739,42 +4739,6 @@ Blitz T Club Team`);
         // Rest of your display logic
     }
     </script>
-
-    <!-- Update the Upcoming Events section to show the May 30, 2025 event -->
-    <div class="dashboard-card">
-        <div class="card-header">
-            <h2><i class="fas fa-calendar"></i> Upcoming Events</h2>
-            <a href="events.html" class="view-all">View All</a>
-        </div>
-        <div class="card-content" id="upcomingEventsList">
-            <div class="event-item">
-                <div class="event-date">
-                    <span class="event-month">MAY</span>
-                    <span class="event-day">30</span>
-                    <span class="event-year">2025</span>
-                </div>
-                <div class="event-info">
-                    <h3 class="event-title">Tesla Light Show Spectacular</h3>
-                    <p class="event-location">
-                        <i class="fas fa-map-marker-alt"></i> Golf IT Up Parking Lot, Thornhill, ON
-                    </p>
-                    <p class="event-time">
-                        <i class="fas fa-clock"></i> 7:30 PM EST
-                    </p>
-                    <div class="event-highlights">
-                        <span class="highlight-tag"><i class="fas fa-lightbulb"></i> Light Show</span>
-                        <span class="highlight-tag"><i class="fas fa-users"></i> Networking</span>
-                        <span class="highlight-tag"><i class="fas fa-camera"></i> Photo Ops</span>
-                    </div>
-                    <a href="events.html" class="btn event-btn">
-                        <i class="fas fa-info-circle"></i> Details
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- ... existing code ... -->
 
     <style>
     /* ... existing styles ... */
