--- a/profile-completion.html
+++ b/profile-completion.html
@@ -368,7 +368,7 @@
                     <div class="form-row">
                         <div class="form-field">
                             <label for="streetAddress">Street Address</label>
-                            <input type="text" id="streetAddress" name="streetAddress" placeholder="123 Main St">
+                            <input type="text" id="streetAddress" name="streetAddress" placeholder="Your Street Address with Street Number">
                             <div class="error-message" id="streetAddressError"></div>
                         </div>
                     </div>
