--- a/register.html
+++ b/register.html
@@ -398,7 +398,7 @@
                     </label>
                     <div class="address-fields">
                         <input type="text" id="street" name="street" required 
-                               placeholder="Street Address (e.g., 123-456 Main St)"
+                               placeholder="Street Address (Your Street Address with Street Number")"
                                pattern="^\d+[A-Za-z]?(\s-\s|\s)\d+\s.+$">
                         
                         <input type="text" id="city" name="city" required
