--- a/register.html
+++ b/register.html
@@ -404,7 +404,7 @@
                         <input type="text" id="city" name="city" required
                                placeholder="City (e.g., Toronto)">
                         
-                        <input type="text" id="province" name="province" required placeholder="Province">
+                        <input type="text" id="province" name="province" required placeholder="Province (e.g., ON, Ontario)">
 
                         <input type="text" id="postalCode" name="postalCode" required
                                placeholder="Postal Code (e.g., K1A 0B1)"
