--- a/register.html
+++ b/register.html
@@ -422,6 +422,7 @@
                     </label>
                     <div class="password-input">
                             <input type="password" id="password" name="password" required
+                                placeholder="Enter your password"
                                pattern="^(?=.*[a-zA-Z])(?=.*\d).{8,}$"
                                title="Must contain at least 8 characters with letters and numbers">
                         <button type="button" class="toggle-password" aria-label="Show password">
