--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -50,10 +50,17 @@
             </ul>
         </aside>
 
+        <!-- Improved visible position for mobile -->
+        <button id="sidebar-toggle" class="btn sidebar-toggle mobile-visible" aria-label="Toggle sidebar menu">
+            <i class="fas fa-bars"></i>
+        </button>
+        
+        <!-- Mobile page header -->
+        <div class="mobile-page-header">
+            <h1>Admin Dashboard</h1>
+        </div>
+
         <main class="admin-content">
-            <button id="sidebar-toggle" class="btn sidebar-toggle">
-                <i class="fas fa-bars"></i>
-            </button>
             <section id="dashboard-overview" class="admin-section active dashboard-content-section">
                 <h2>Dashboard Overview</h2>
                 <!-- Overview content will go here -->
