--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -59,18 +59,15 @@
                 <h3>Admin Menu</h3>
             </div>
             <ul class="sidebar-nav">
-                <li><a href="#" class="active nav-item" data-target="dashboard-overview"><i class="fas fa-tachometer-alt"></i> <span>Overview</span></a></li>
-                <li><a href="#" class="nav-item" data-target="user-management"><i class="fas fa-users-cog"></i> <span>User Management</span></a></li>
-                <li><a href="#" class="nav-item" data-target="event-management"><i class="fas fa-calendar-alt"></i> <span>Event Management</span></a></li>
-                <li><a href="#" class="nav-item" data-target="content-management"><i class="fas fa-file-alt"></i> <span>Content Management</span></a></li>
-                <li><a href="#" class="nav-item" data-target="settings"><i class="fas fa-cogs"></i> <span>Settings</span></a></li>
+                <li><a href="#" class="active nav-item" data-target="dashboard-overview"><i class="fas fa-tachometer-alt"></i> Overview</a></li>
+                <li><a href="#" class="nav-item" data-target="user-management"><i class="fas fa-users-cog"></i> User Management</a></li>
+                <li><a href="#" class="nav-item" data-target="event-management"><i class="fas fa-calendar-alt"></i> Event Management</a></li>
+                <li><a href="#" class="nav-item" data-target="content-management"><i class="fas fa-file-alt"></i> Content Management</a></li>
+                <li><a href="#" class="nav-item" data-target="settings"><i class="fas fa-cogs"></i> Settings</a></li>
             </ul>
         </aside>
 
         <main class="admin-content">
-            <button id="sidebar-toggle" class="btn sidebar-toggle" aria-label="Toggle sidebar menu" title="Toggle sidebar menu">
-                <i class="fas fa-bars"></i>
-            </button>
             <section id="dashboard-overview" class="admin-section active dashboard-content-section">
                 <h2>Dashboard Overview</h2>
                 <!-- Overview content will go here -->
