--- a/events.html
+++ b/events.html
@@ -1520,7 +1520,7 @@
                 <div class="qr-code-background" 
                      style="width: 280px; 
                             height: 280px; 
-                            background-image: url('https://i.postimg.cc/xddpFf52/QR-code-for-light.jpg'); 
+                            background-image: url('https://i.postimg.cc/nzqXwGZX/IMG-6509.jpg'); 
                             background-size: cover; 
                             background-position: center center; 
                             background-repeat: no-repeat; 
