--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -264,7 +264,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2024 Blitz T Club. All rights reserved.</p>
+            <p>© 2025 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a></p>
         </div>
     </footer>
