--- a/events.html
+++ b/events.html
@@ -1366,9 +1366,9 @@
             </div>
 
             <div class="event-actions">
-            <button class="btn primary-btn" id="eventRegisterBtn" disabled>
+              <button class="btn primary-btn" id="eventRegisterBtn">
             <i class="fas fa-car"></i> Register Your Tesla
-            </button>
+            </ button>
                 <button class="btn primary-btn" id="checkStatusBtn">
                     <i class="fas fa-clipboard-check"></i> Check My Registration
                 </button>
