--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -13,8 +13,164 @@ DOCTYPE html>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js" integrity="sha512-qZvrmS2ekKPF2mSznTQsxqPgnpkI4DNTlrdUmTzrDgektczlKNRRhy5X5AAOnx5S09ydFYWWNSfcEqDTTHgtNA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="navigation.js" defer></script>
     <script src="admin-dashboard.js" defer></script>
+    <style>
+        /* Add these styles for waiver status */
+        .status-signed {
+            color: #28a745; /* Green */
+            font-weight: bold;
+        }
+        .status-signed .fas {
+            margin-right: 5px;
+        }
+
+        .status-not-signed {
+            color: #dc3545; /* Red */
+            font-weight: bold;
+        }
+        .status-not-signed .fas {
+            margin-right: 5px;
+        }
+
+        /* Style for the view waiver button/icon */
+        .view-waiver-btn {
+            background: none;
+            border: none;
+            color: #007bff;
+            cursor: pointer;
+            padding: 0 5px;
+            font-size: 0.9em;
+            vertical-align: middle;
+        }
+        .view-waiver-btn:hover {
+            color: #0056b3;
+            text-decoration: underline;
+        }
+
+        /* Enhanced Waiver Details Modal Styles */
+        .waiver-details-modal .modal-content {
+            background-color: #f8f9fa; /* Lighter background for content area */
+            color: #212529; /* Darker text for readability */
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            max-height: 90vh; /* Ensure it doesn't overflow viewport height */
+            display: flex;
+            flex-direction: column;
+            width: 95%; /* Default width for mobile */
+            margin: 2.5vh auto; /* Adjust margin for vertical centering */
+            padding: 15px; /* Add some padding directly to modal-content for mobile */
+        }
+
+        @media (min-width: 768px) { /* Desktop styles */
+            .waiver-details-modal .modal-content {
+                width: 80%;
+                max-width: 800px;
+                padding: 20px; /* Restore original padding for desktop */
+            }
+        }
+
+        .waiver-details-modal h2 {
+            color: #007bff; /* Accent color for heading */
+            border-bottom: 2px solid #dee2e6;
+            padding-bottom: 10px;
+            margin-bottom: 15px; /* Slightly reduced margin */
+            font-size: 1.25rem; /* Adjusted font size */
+        }
+
+        .waiver-info-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Smaller minmax for better stacking */
+            gap: 10px; /* Reduced gap */
+            margin-bottom: 15px;
+        }
+
+        .info-section {
+            background-color: #ffffff;
+            padding: 10px; /* Reduced padding */
+            border-radius: 6px;
+            border: 1px solid #e9ecef;
+        }
+
+        .info-section h4 {
+            color: #495057;
+            font-size: 1rem; /* Adjusted font size */
+            margin-top: 0;
+            margin-bottom: 8px;
+            border-bottom: 1px solid #f1f3f5;
+            padding-bottom: 6px;
+        }
+
+        .info-section p {
+            margin-bottom: 6px;
+            font-size: 0.85rem; /* Adjusted font size */
+            line-height: 1.5;
+        }
+        .info-section p strong {
+            color: #343a40;
+        }
+
+        .waiver-details-modal h4 { /* For "Full Waiver Text" heading */
+            color: #007bff;
+            font-size: 1.2rem;
+            margin-top: 10px;
+            margin-bottom: 8px;
+        }
+
+        .waiver-full-text-container {
+            flex-grow: 1; /* Allows the text area to fill available space */
+            overflow-y: auto; /* Enables scrolling for the waiver text only */
+            background-color: #ffffff;
+            border: 1px solid #dee2e6;
+            border-radius: 6px;
+            padding: 10px;
+            margin-bottom: 15px; /* Adjusted margin */
+            min-height: 150px; /* Ensure a decent minimum height */
+            max-height: 30vh; /* Reduced max-height for mobile to give more space to other elements */
+        }
+
+        .waiver-full-text {
+            white-space: pre-wrap; /* Preserves formatting and wraps lines */
+            font-family: 'Courier New', Courier, monospace; /* Monospaced font for legal text */
+            font-size: 0.8rem; /* Slightly reduced for mobile, check readability */
+            color: #343a40;
+            margin: 0; /* Remove default pre margin */
+        }
+
+        .waiver-details-modal .modal-actions {
+            display: flex;
+            flex-direction: column; /* Stack buttons by default for mobile */
+            gap: 10px;
+            margin-top: auto; /* Pushes actions to the bottom if modal content is short */
+            padding-top: 10px; /* Reduced padding */
+            border-top: 1px solid #dee2e6;
+        }
+
+        .waiver-details-modal .modal-actions button {
+            width: 100%; /* Full width buttons for mobile */
+            padding: 12px; /* Good tap height */
+            font-size: 0.95rem;
+        }
+
+        @media (min-width: 576px) { /* For small tablets and up, buttons can be row */
+            .waiver-details-modal .modal-actions {
+                flex-direction: row;
+                justify-content: flex-end;
+            }
+            .waiver-details-modal .modal-actions button {
+                width: auto; /* Reset width for larger screens */
+            }
+        }
+
+        /* Ensure close button is styled appropriately for the new modal background */
+        .waiver-details-modal .close {
+            color: #6c757d; /* Softer color for close button */
+        }
+        .waiver-details-modal .close:hover {
+            color: #343a40;
+        }
+    </style>
 </head>
 <body class="admin-dashboard-page">
     <nav>
@@ -203,6 +359,7 @@ DOCTYPE html>
                                 <th>Vehicle Model</th>
                                 <th>Registered At</th>
                                 <th>Status</th> 
+                                <th>Waiver Signed?</th>
                                 <th>Actions</th>
                             </tr>
                         </thead>
