--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -382,6 +382,25 @@ DOCTYPE html>
                 <h2>Settings</h2>
                 <!-- Admin settings will go here -->
             </section>
+
+            <!-- EE Auto Group Deals Section -->
+            <div class="vendor-deals-section" style="margin:32px 0 0 0;">
+                <h3 style="margin-bottom:16px;"><i class="fas fa-car"></i> Vendor Deal Tracking</h3>
+                <div class="eeauto-deal-card" style="display:flex;align-items:center;gap:32px;background:linear-gradient(90deg,#232a35 70%,#00e67622 100%);border-radius:14px;padding:28px 32px;box-shadow:0 6px 24px rgba(0,230,118,0.08),0 2px 8px rgba(0,0,0,0.10);max-width:600px;position:relative;overflow:hidden;">
+                    <div style="display:flex;flex-direction:column;align-items:flex-start;justify-content:center;min-width:120px;">
+                        <span style="font-size:2.4rem;font-weight:900;letter-spacing:2.5px;font-family:'Montserrat',Arial,sans-serif;line-height:1.1;">
+                            <span style="color:#FF5722;">EE</span><span style="color:#111;"> Auto</span>
+                        </span>
+                    </div>
+                    <div style="width:1.5px;height:56px;background:linear-gradient(180deg,#00e67655 0%,#232a35 100%);margin:0 32px 0 0;border-radius:2px;"></div>
+                    <div style="flex:1;min-width:0;display:flex;flex-direction:column;align-items:flex-start;">
+                        <div style="font-size:2.2rem;font-weight:800;color:#00e676;line-height:1;"> <span id="eeAutoDealsCount">Loading...</span> </div>
+                        <div style="font-size:1.1rem;font-weight:600;color:#fff;margin-bottom:6px;">EE Auto Group Deals</div>
+                        <div style="font-size:0.98rem;color:#b0b8c5;margin-bottom:12px;">Total group window tint deals logged by EE Auto for Blitz T Club members.</div>
+                        <a href="ee-auto-tracking.html" target="_blank" class="btn primary-btn" style="background:#00e676;color:#fff;font-weight:700;padding:10px 22px;border-radius:6px;font-size:1.08em;box-shadow:0 2px 8px rgba(0,230,118,0.10);display:inline-block;">View Deals <i class="fas fa-external-link-alt"></i></a>
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
