--- a/ee-auto-tracking.html
+++ b/ee-auto-tracking.html
@@ -6,6 +6,16 @@
     <title>EE Auto Group Deal Tracking - Blitz T Club</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
+    <script>
+    // Redirect to verify-member.html if member_id is present in the URL
+    (function() {
+        const params = new URLSearchParams(window.location.search);
+        const memberId = params.get('member_id');
+        if (memberId) {
+            window.location.href = `verify-member.html?member_id=${encodeURIComponent(memberId)}`;
+        }
+    })();
+    </script>
     <style>
         :root {
             --eeauto-green: #00e676;
